--- a/public/admin/admin-subscriptions.html
+++ b/public/admin/admin-subscriptions.html
@@ -156,14 +156,42 @@
     const $ = (id) => document.getElementById(id);
     const out = (v) => { $('out').textContent = typeof v === 'string' ? v : JSON.stringify(v, null, 2); };
 
-    const env = window.__LP_ENV || window.LP_ENV || null;
-    if (!env?.SUPABASE_URL || !env?.SUPABASE_ANON_KEY) {
-      $('statusText').textContent = 'Missing env';
-      out('Missing SUPABASE_URL / SUPABASE_ANON_KEY. Ensure /api/env is deployed and not cached.');
-      throw new Error('Missing env');
-    }
+    
+async function fetchEnv() {
+  const res = await fetch('/api/env', { cache: 'no-store' });
+  if (!res.ok) throw new Error('Failed to load /api/env: ' + res.status);
+  return await res.json();
+}
 
-    const supabase = createClient(env.SUPABASE_URL, env.SUPABASE_ANON_KEY);
+const env = await fetchEnv();
+if (!env?.SUPABASE_URL || !env?.SUPABASE_ANON_KEY) {
+  $('statusText').textContent = 'Missing env';
+  out('Missing SUPABASE_URL / SUPABASE_ANON_KEY from /api/env.');
+  throw new Error('Missing env');
+}
+
+const supabase = createClient(env.SUPABASE_URL, env.SUPABASE_ANON_KEY);
+
+const ADMIN_ROLES = new Set(['admin', 'super_admin']);
+function isAdminRole(role) { return ADMIN_ROLES.has(String(role || '').toLowerCase()); }
+
+async function safeGetRole() {
+  const candidates = ['rpc_lp_my_role','get_my_role','rpc_get_my_role','my_role','lp_my_role'];
+  let lastErr = null;
+  for (const fn of candidates) {
+    try {
+      const { data, error } = await supabase.rpc(fn, {});
+      if (error) { lastErr = error; continue; }
+      if (typeof data === 'string') return data;
+      if (data && typeof data === 'object') {
+        if (typeof data.role === 'string') return data.role;
+        if (typeof data.current_role === 'string') return data.current_role;
+      }
+    } catch (e) { lastErr = e; }
+  }
+  console.warn('safeGetRole failed', lastErr);
+  return 'no_role';
+}
 
     const setStatus = (text, kind='idle') => {
       $('statusText').textContent = text;
@@ -172,18 +200,49 @@
     };
 
     const syncAuthUI = async () => {
-      const { data } = await supabase.auth.getSession();
-      const signedIn = !!data.session;
-      $('btnSignIn').style.display = signedIn ? 'none' : '';
-      $('btnSignOut').style.display = signedIn ? '' : 'none';
-      setStatus(signedIn ? 'Signed in' : 'Signed out', signedIn ? 'good' : 'idle');
-    };
+  const { data } = await supabase.auth.getSession();
+  const session = data?.session || null;
+  const signedIn = !!session;
+
+  if (!signedIn) {
+    $('btnSignIn').style.display = '';
+    $('btnSignOut').style.display = 'none';
+    setStatus('Signed out', 'idle');
+    return;
+  }
+
+  // Signed in: must be admin/super_admin or we immediately sign out.
+  const role = await safeGetRole();
+  if (!isAdminRole(role)) {
+    try { await supabase.auth.signOut(); } catch (_) {}
+    $('btnSignIn').style.display = '';
+    $('btnSignOut').style.display = 'none';
+    setStatus('Access denied (not admin). Signed out.', 'bad');
+    out('Access denied: your account role is "' + role + '". Admin pages require admin/super_admin.');
+    return;
+  }
+
+  $('btnSignIn').style.display = 'none';
+  $('btnSignOut').style.display = '';
+  setStatus('Signed in (role: ' + role + ')', 'good');
+};
 
     // nav
     $('btnBack').onclick = () => (window.location.href = '/admin.html');
     $('btnDashboard').onclick = () => (window.location.href = '/dashboard.html');
     $('btnSignIn').onclick = () => $('dlg').showModal();
-    $('btnSignOut').onclick = async () => { await supabase.auth.signOut(); await syncAuthUI(); };
+    $('btnSignOut').onclick = async () => {
+try {
+  setStatus('Signing out…', 'warn');
+  await supabase.auth.signOut();
+} catch (e) {
+  console.warn(e);
+}
+try { localStorage.removeItem('sb-access-token'); localStorage.removeItem('sb-refresh-token'); } catch(_) {}
+setStatus('Signed out', 'idle');
+location.href = '/admin.html';
+};
+
 
     $('btnDoLogin').onclick = async () => {
       const email = $('inEmail').value.trim();
